--- a/market/ViewItem.html
+++ b/market/ViewItem.html
@@ -39,8 +39,14 @@
         var displayPriceWithCurrency = displayPrice + " " + displayCurrency;
         document.getElementById("title").innerHTML = escapeHtml(request.name);
         document.getElementById("itemID").innerHTML = escapeHtml(id);
+        document.getElementById("itemIDModal").innerHTML = escapeHtml(id);
         document.getElementById("price").innerHTML = escapeHtml(displayPriceWithCurrency);
+        document.getElementById("priceModal").innerHTML = escapeHtml(displayPriceWithCurrency);
         document.getElementById("sellerID").innerHTML = seller;
+        document.getElementById("sellerIDModal").innerHTML = seller;
+        // Set Seller ID and Price Units in session
+        sessionStorage.setItem("price", displayPrice);
+        sessionStorage.setItem("seller", seller);
       }, "json"); 
       // Get images and shipping info from message
       $.post(Constants.apiUrl, { 
@@ -565,9 +571,105 @@
           document.getElementById("location").innerHTML = escapeHtml(city);
         }};
   </script>
+</head>
+<body class="full-width" onload="setAccountNumber(); showItem(); setLanguage();">
+  <section id="container">
+    <script type="text/javascript" src="js/menu.js"></script>
+    <section id="main-content">
+      <section class="wrapper">
+        <div class="row">
+          <div class="col-lg-12">
+            <section class="panel">
+              <header class="panel-heading" id="panel-heading">
+                <span data-i18n="item_id">Item ID</span>: <span id="itemID"></span>
+              </header>
+              <div class="panel-body" style="padding:30px;padding-bottom:0px;padding-top:20px;" id="panel-body">
+                <div class="form-group">
+                    <aside class="profile-nav alt">
+                      <section class="panel">
+                        <div class="user-heading alt">
+                          <span id="top_image"><a href="#"><img alt="" src="img/Box-icon.png"></a></span>
+                          <h1 id="title">No Item Title</h1>
+                          <p><b> <span data-i18n="seller_id">Seller ID</span>:</b> <span id="sellerID"></span></p>
+                          </div>
+                          <div>
+                          <p><b> <span data-i18n="description">Description</span>:</b> <span id="description"></span></p></b>
+                          <p><b> <span data-i18n="price">Price</span>:</b> <span id="price"></span></p>
+                          <p><b> <span data-i18n="location">Location</span>:</b> <span id="location"></span></p>
+                          <p><b> <span data-i18n="shipping_method">Shipping Method</span>:</b> <span id="shipping"></span></p>
+                          <p><b> <span>Shipping Cost</span>:</b> <span id="shipping_price"></span></p>
+                          </div>
+                          <div class="user-heading alt" id="extra_images_section"></div>
+                          </div>
+                      </section>
+                    </aside>
+                    <span id="listingResult"></span>
+                    <span id="payment"></span>
+                    <div id="purchaseButtonSection">
+                      <button class="btn btn-default"><span data-i18n="message_to_seller">Message Seller</span></button>
+                      <button class="btn btn-danger" data-toggle="modal" data-target="#myModal"><span data-i18n="buy_item">Buy Item</span></button>
+                    </div> 
+                    <!-- Purchase Modal -->
+                    <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myModal" class="modal fade">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+                              <h4 class="modal-title"><span data-i18n="buy_item">Buy Item</span></h4>
+                            </div>
+                            <div class="modal-body">
+                          <p><b> <span data-i18n="seller_id">Seller ID</span>:</b> <span id="sellerIDModal"></span></p>
+                          <p><b> <span data-i18n="item_id">Item ID</span>: </b> <span id="itemIDModal"></span></p>
+                          <p><b> <span data-i18n="price">Price</span>:</b> <span id="priceModal"></span></p>
+                          <br/>
+                              <p><span>Please confirm this purchase by entering your account secret phrase.</span></p>
+                              <div class="form-group">
+                              <label for="secret_phrase"><b><span data-i18n="account_number">BLX Account Number</span></b> :</label>
+                              <div class="iconic-input">
+                                <i class="fa fa-bars"></i>
+                                <input type="password" class="form-control" data-i18n="[placeholder]placeholder_required" id="secret_phrase" autofocus>
+                              </div>
+                              <br/>
+                                <button data-dismiss="modal" class="btn btn-secondary" type="button">Close</button>&nbsp;
+                                <button data-dismiss="modal" class="btn btn-default" type="button" onclick="purchase()">Confirm</button>
+                            </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    <!--Modal-->
+                  </div>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
+        </div>
+      </section>
+    </section>
+  </section>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/jquery.dcjqaccordion.2.7.min.js"></script>
+  <script src="js/bootstrap-hover-dropdown.min.js"></script>
+  <script src="assets/fancybox/jquery.fancybox.js"></script>
+  <script src="js/validator.min.js"></script>
+  <script type="text/javascript">
+  $(function() {
+    jQuery(".fancybox").fancybox();
+  });
+  </script>
+  <script src="js/constants.js"></script>
+  <script src="js/freemarket_scripts.js"></script>
+  <script src="js/common-scripts.js"></script>
+  <script src="js/i18next.min.js"></script>
+  <script src="js/freemarket_localization_scripts.js"></script>
+  
   <script>
     function purchase() {
-    var listingid = (getQueryVariable("itemid"));    
+    var listingid = (getQueryVariable("itemid"));
+    var recipient = sessionStorage.getItem("seller");
+    var price = sessionStorage.getItem("price") * 100;
     $.getJSON(Constants.apiUrl, {
         requestType: 'getTime'     
       },
@@ -602,96 +704,29 @@
           document.getElementById("listingResult").innerHTML = purchase_failure + "<b> " + errorDescription + "</b>";
           };
       },"json");
+
+    $.post(Constants.apiUrl,{
+      requestType: 'transferCurrency',
+      recipient: recipient,
+      currency: Constants.USDXId,
+      units: price,
+      secretPhrase: $("#secret_phrase").val(),
+      feeNQT: 100000000,
+      deadline: 60
+    },
+      function(payment){
+      console.log(payment);
+      var errorCode1 = payment.errorCode;
+        if (!errorCode1) {
+          var paymentID = payment.transaction;
+          document.getElementById("payment").innerHTML = "<p><b>Payment Transaction ID : " + paymentID + "</b></p>";
+          } else { 
+          var errorDescription1 = payment.errorDescription;
+          // Display failure message
+          document.getElementById("payment").innerHTML = "<p>Payment Transaction ID : " + errorDescription1 + "</p>";
+          };
+    },"json");
   };
   </script>
-</head>
-<body class="full-width" onload="setAccountNumber(); showItem(); setLanguage();">
-  <section id="container">
-    <script type="text/javascript" src="js/menu.js"></script>
-    <section id="main-content">
-      <section class="wrapper">
-        <div class="row">
-          <div class="col-lg-12">
-            <section class="panel">
-              <header class="panel-heading" id="panel-heading">
-                <span data-i18n="item_id">Item ID</span>: <span id="itemID"></span>
-              </header>
-              <div class="panel-body" style="padding:30px;padding-bottom:0px;padding-top:20px;" id="panel-body">
-                <div class="form-group">
-                    <aside class="profile-nav alt">
-                      <section class="panel">
-                        <div class="user-heading alt">
-                          <span id="top_image"><a href="#"><img alt="" src="img/Box-icon.png"></a></span>
-                          <h1 id="title">No Item Title</h1>
-                          <p><b> <span data-i18n="seller_id">Seller ID</span>:</b> <span id="sellerID"></span></p>
-                          </div>
-                          <div>
-                          <p><b> <span data-i18n="description">Description</span>:</b> <span id="description"></span></p></b>
-                          <p><b> <span data-i18n="price">Price</span>:</b> <span id="price"></span></p>
-                          <p><b> <span data-i18n="location">Location</span>:</b> <span id="location"></span></p>
-                          <p><b> <span data-i18n="shipping_method">Shipping Method</span>:</b> <span id="shipping"></span></p>
-                          <p><b> <span>Shipping Cost</span>:</b> <span id="shipping_price"></span></p>
-                          </div>
-                          <div class="user-heading alt" id="extra_images_section"></div>
-                          </div>
-                      </section>
-                    </aside>
-                    <span id="listingResult"></span>
-                    <div id="purchaseButtonSection">
-                      <button class="btn btn-default"><span data-i18n="message_to_seller">Message Seller</span></button>
-                      <button class="btn btn-danger" data-toggle="modal" data-target="#myModal"><span data-i18n="buy_item">Buy Item</span></button>
-                    </div> 
-                    <!-- Purchase Modal -->
-                    <div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myModal" class="modal fade">
-                        <div class="modal-dialog">
-                          <div class="modal-content">
-                            <div class="modal-header">
-                              <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
-                              <h4 class="modal-title"><span data-i18n="buy_item">Buy Item</span></h4>
-                            </div>
-                            <div class="modal-body">
-                              <p><span>Please confirm your purchase by entering your account secret phrase.</span></p>
-                              <div class="form-group">
-                              <label for="secret_phrase"><b><span data-i18n="account_number">BLX Account Number</span></b> :</label>
-                              <div class="iconic-input">
-                                <i class="fa fa-bars"></i>
-                                <input type="password" class="form-control" data-i18n="[placeholder]placeholder_required" id="secret_phrase" autofocus>
-                              </div>
-                              <br/>
-                                <button data-dismiss="modal" class="btn btn-secondary" type="button">Close</button>&nbsp;
-                                <button data-dismiss="modal" class="btn btn-default" type="button" onclick="purchase()">Confirm</button>
-                            </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    <!--End Image Help Modal-->
-                  </div>
-                </div>
-              </div>
-            </section>
-          </div>
-        </div>
-        </div>
-      </section>
-    </section>
-  </section>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.dcjqaccordion.2.7.min.js"></script>
-  <script src="js/bootstrap-hover-dropdown.min.js"></script>
-  <script src="assets/fancybox/jquery.fancybox.js"></script>
-  <script src="js/validator.min.js"></script>
-  <script type="text/javascript">
-  $(function() {
-    jQuery(".fancybox").fancybox();
-  });
-  </script>
-  <script src="js/constants.js"></script>
-  <script src="js/freemarket_scripts.js"></script>
-  <script src="js/common-scripts.js"></script>
-  <script src="js/i18next.min.js"></script>
-  <script src="js/freemarket_localization_scripts.js"></script>
-  <script src="js/pending_sales_notice.js"></script>
 </body>
 </html>
