--- a/market/ViewYourItemPending.html
+++ b/market/ViewYourItemPending.html
@@ -488,9 +488,6 @@
                           <p><b> <span data-i18n="description">Description</span>:</b> <span id="description"></span></p></b>
                           <p><b> <span data-i18n="price">Price</span>:</b> <span id="price"></span></p>
                           <p><b> <span data-i18n="location">Location</span>:</b> <span id="location"></span></p>
-                          <p><b> <span data-i18n="shipping_method">Shipping Method</span>:</b> <span id="shipping"></span></p>
-                          <p><b> <span>Shipping Cost</span>:</b> <span id="shipping_price"></span></p>
-                          </div>
                           </div>
                       </section>
                     </aside>
@@ -509,7 +506,7 @@
                               <h4 class="modal-title"><span data-i18n="button_finalize_purchase">Finalize Sale</span></h4>
                             </div>
                             <div class="modal-body">
-                              <p><span>Please finalize your sale by entering your account secret phrase.</span></p>
+                              <p><span>Enter your account secret phrase to finalize this sale.</span></p>
                               <div class="form-group">
                               <label for="secret_phrase"><b><span data-i18n="account_number">BLX Account Number</span></b> :</label>
                               <div class="iconic-input">
